--- a/openshift/ansible-after-install.yml
+++ b/openshift/ansible-after-install.yml
@@ -7,8 +7,8 @@
       src: resources/persistent-volume.yml
       dest: /home/vagrant/persistent-volume.yml
   - name: Login as System-Admin
-      command: 'oc login -u system:admin'
+    command: oc login -u system:admin
   - name: Create PV
-    command: 'oc create -f /home/vagrant/persistent-volume.yml'
-  name: Create Cluster Admin
-    command: 'oc adm policy add-cluster-role-to-user cluster-admin admin'
+    command: oc create -f /home/vagrant/persistent-volume.yml
+  - name: Create Cluster Admin
+    command: oc adm policy add-cluster-role-to-user cluster-admin admin
