--- a/openshift/resources/persistent-volume.yml
+++ b/openshift/resources/persistent-volume.yml
@@ -1,12 +1,54 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs
+  name: pvnfs01
 spec:
   capacity:
-    storage: 15G
+    storage: 5G
   accessModes:
     - ReadWriteOnce
+  nfs:
+    path: /var/nfs
+    server: domain.vnet.de
+  persistentVolumeReclaimPolicy: Recycle
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pvnfs02
+spec:
+  capacity:
+    storage: 5G
+  accessModes:
+  - ReadWriteOnce
+  nfs:
+    path: /var/nfs
+    server: domain.vnet.de
+  persistentVolumeReclaimPolicy: Recycle
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pvnfs03
+spec:
+  capacity:
+    storage: 5G
+  accessModes:
+  - ReadWriteOnce
+  nfs:
+    path: /var/nfs
+    server: domain.vnet.de
+  persistentVolumeReclaimPolicy: Recycle
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pvnfs04
+spec:
+  capacity:
+    storage: 5G
+  accessModes:
+  - ReadWriteOnce
   nfs:
     path: /var/nfs
     server: domain.vnet.de
